data/derived/comb/progs/unify/prog4777.ml.out
Characters 483-486:
  | Flatten (e1,e2,e3) -> "(" exprToString e1 ^ "/" ^ exprToString e2 ^ "/" ^ exprToString e3 ^ ")";;
                          ^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
